<resources>
    <string name="app_name">Instagram</string>
    <string name="username">Username</string>
    <string name="login">login</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="take_photo">Take Photo</string>
    <string name="description">Description…</string>
    <string name="create_new_account">Create New Account</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="logout">Logout</string>
    <string name="handle">Handle</string>
</resources>
